[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Enemies/burning-ghoul.gd" type="Script" id=1]
[ext_resource path="res://fonts/burning-ghoul.png" type="Texture" id=2]
[ext_resource path="res://assets/imgs/hp-bar-bg-small.png" type="Texture" id=5]
[ext_resource path="res://assets/imgs/hp-bar-prog-small.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 20 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.5
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.458333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_callMethodFinishDead"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 21 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13, 21 )

[node name="burning-ghoul" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
collision_mask = 528
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -1.5, 1 )
texture = ExtResource( 2 )
hframes = 12
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "attack"
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/dead = SubResource( 6 )

[node name="AreaAttack" type="Area2D" parent="." groups=["Enemies"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="RayFront" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 16

[node name="RayEnd" type="RayCast2D" parent="."]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 528

[node name="RayFlip" type="RayCast2D" parent="."]
position = Vector2( -32, 0 )
enabled = true
cast_to = Vector2( -56, 0 )

[node name="DeadArea" type="Area2D" parent="." groups=["EnemiesDefense"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 3, 11 )
shape = SubResource( 5 )

[node name="SwordHurt01" type="AudioStreamPlayer" parent="."]

[node name="SwordHurt02" type="AudioStreamPlayer" parent="."]

[node name="HPbar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -24.0
margin_right = 11.0
margin_bottom = -22.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
